# ddd-toolkit-core

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: lib.rs  testing.rs  usecase.rs
src/adapter/: clock.rs  id.rs  mod.rs
src/application/: mod.rs  usecase.rs
src/domain/: aggregate.rs  entity.rs  entity_id.rs  enum_vo.rs  error.rs  event.rs  mod.rs  secret_vo.rs  vo.rs
src/mock/: clock.rs  id.rs  mod.rs  repository.rs
src/port/: clock.rs  error.rs  event.rs  id.rs  mod.rs  repository.rs
